--- a/style.css
+++ b/style.css
@@ -1,5 +1,15 @@
+body {
+    background-color: cadetblue;
+}
+
 h1 {
     text-align: center;
+}
+
+#currentCanvas {
+    text-align: center;
+    font-size: large;
+    font-weight: bold;
 }
 
 .workArea {
@@ -16,6 +26,11 @@ h1 {
     font-weight: bold;
 }
 
+#drawType {
+    list-style-type: none;
+    padding: 0;
+}
+
 #sketchPad {
     width: 720px;
     height: 720px;
@@ -25,4 +40,5 @@ h1 {
     border-style: double;
     border-width: 10px;
     padding: 10px;
+    background-color: white;
 }
